fix yellow section images mask flickering && set app intro animation

--- a/src/app/components/yellow-section/yellow-section.component.scss
+++ b/src/app/components/yellow-section/yellow-section.component.scss
@@ -1,21 +1,19 @@
 :host {
-  display: block;
-
   .yellow-section-container {
     position: relative;
     display: flex;
     flex-direction: column;
     width: 100%;
-    overflow-y: scroll;
-    overflow-x: hidden;
-    height: 405vh;
+    height: 400vh;
+    overflow: hidden;
 
-    .yellow-section-catch-phrase-container {
+    h2.yellow-section-catch-phrase-container {
       position: absolute;
       top: 0.5rem;
       left: 1rem;
       z-index: 6;
       height: 30rem;
+      min-width: 100%;
       width: 100%;
       font-size: 5rem;
       font-family: "EasyNovember";
@@ -62,17 +60,24 @@
       top: 0;
       left: 0;
       z-index: 5;
-      height: 100vh;
-      width: 100vw;
-      overflow: hidden;
+      height: 102vh;
+      min-height: 102vh;
+      min-width: 100%;
+      width: 100%;
       padding: 0;
+      margin: 0;
 
-      .yellow-section-bg-clipper {
+      svg.yellow-section-bg-clipper {
         width: 100%;
         height: 100%;
+        overflow: hidden;
 
         rect {
           fill: #fff;
+          width: 100%;
+          height: 100%;
+          min-width: 100vw;
+          min-height: 100vh;
 
           &#mask-rect {
             mask: url(#yellow-section-mask);
@@ -103,15 +108,29 @@
           transform: scale(0.12) translate(-95%, -18%);
         }
         &.web path {
-          transform: scale(0.075, 0.05) translate(-28%, 545%);
+          transform: scale(0.065, 0.05) translate(-28%, 545%);
         }
       }
     }
 
     .yellow-section-background-pic {
-      height: 99vh;
+      height: 100vh;
+      width: 100vw;
       overflow: hidden;
+      z-index: 1;
 
+      &.sunset-pic--1 {
+        z-index: 2;
+      }
+      &.sunset-pic--2 {
+        z-index: 3;
+      }
+      &.sunset-pic--3 {
+        z-index: 4;
+      }
+      &.sunset-pic--4 {
+        z-index: 5;
+      }
       img {
         width: 100%;
         object-fit: cover;
